Segment Card fixes ( 4588 )  - replaced font awesome spinner icon ( not working on IE 9) with spinner JS  - re-factored code  ( JS , Template and LESS )

--- a/css/common/segment-cards.less
+++ b/css/common/segment-cards.less
@@ -28,7 +28,6 @@ li {
 			color                 : @sc-white;
 			background            : @sc-charcoal;
 			height                : @sc-image-height;
-			overflow              : hidden;
 			border-radius         : 3px 3px 0 0;
 		    -moz-border-radius    : 3px 3px 0 0;
 		    -webkit-border-radius : 3px 3px 0 0;
@@ -130,15 +129,14 @@ li {
 			}
 
 			span.sc-watch-later-loading-icon {
-				font-size       : 25px;
 				cursor          : auto;
 				height          : 30px;
 				line-height     : 1.5;
 				text-decoration : none;
 				position        : absolute;
 				z-index         : 3;
-				top             : 76px;
-				right           : 15px;
+				top             : 75px;
+				right           : 25px;
 				display         : none;
 			}
 		}
